Bug 164284 - Slide name deleted when moving slide position
Summary: Slide name deleted when moving slide position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0 target:25.2.1 target:24...
Keywords: bibisected, bisected, regression
: 164293 (view as bug list)
Depends on:
Blocks: Slide-Page-Pane Slide-Show
  Show dependency treegraph
 
Reported: 2024-12-11 14:57 UTC by jwogeiger
Modified: 2025-01-27 14:30 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
File to test behavior (11.76 KB, application/vnd.oasis.opendocument.presentation)
2024-12-11 17:21 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jwogeiger 2024-12-11 14:57:18 UTC
Description:
When a slide is moved to a new position an already set slide title is deleted and the slide is named "Slide n".

Steps to Reproduce:
1.presentation contains more than one slide
2.rename a slide
3.move the slide to a new position in the sequence

Actual Results:
slide title changed to "Slide n"

Expected Results:
slide title unchanged


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 20; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 Regina Henschel 2024-12-11 17:16:53 UTC
Changed 'title' to 'name' in subject, because it is not about the title object.

The same problem is in Draw, see https://ask.libreoffice.org/t/draw-navigator-replaces-a-user-page-rename-to-the-auto-numbered-page-after-the-page-order-is-changed/114933/2

It fails in Version: Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 87fa9aec1a63e70835390b81c40bb8993f1d4ff6
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

It was OK in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 32; OS: Windows 10.0 Build 26100; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

This bug breaks interactions where a click goes to a special slide.
Comment 2 Regina Henschel 2024-12-11 17:21:53 UTC
Created attachment 198068 [details]
File to test behavior

Open attached file.
Open Navigator to see slide names.
Start presentation on first slide. Click on the rectangle. The show goes to the slide with the arrow shape.
Leave show mode.

In the slide pane, drag the slide with the arrow down to last position.
Notice the slide name change in the navigator.
Start presentation on first slide. Click on the rectangle. The show does no longer go to the slide with the arrow shape.
Comment 3 Aron Budea 2025-01-11 16:44:02 UTC
Following Regina's steps from comment 2, this is a regression from the following commit, bibisected using bibisect-win64-24.2.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=139cffc531277b57bae8e272fef13af00ace5366
author		Andreas Heinisch <andreas.heinisch@yahoo.de>	2023-07-24 11:34:27 +0200
committer	Andreas Heinisch <andreas.heinisch@yahoo.de>	2023-08-25 14:10:52 +0200

tdf#39519 - Rename slide if its name is not unique
Comment 4 Aron Budea 2025-01-11 16:47:44 UTC
*** Bug 164293 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2025-01-12 17:12:51 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/74358a0f500a5f102791a55ac9e090df0c236488

tdf#164284 - Prevent page name change during page move

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-01-14 10:32:15 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/8e489b8e47dce672aa558920a50721ac1f4ed1aa

tdf#164284 - Prevent page name change during page move

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-01-27 14:30:59 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8100f1a3f85b6a0c755b75fea3697da960e6e96e

tdf#164284 - Prevent page name change during page move

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.