tdf#164284 - Prevent page name change during page move

Change-Id: I341c5b9baf7cc39b8d543df89b4c46a59bf2a9e6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180138
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 74358a0f500a5f102791a55ac9e090df0c236488)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180154
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>