sd/source/core/drawdoc3.cxx
@@ -724,7 +724,10 @@ bool SdDrawDocument::InsertBookmarkAsPage(
 
                 // tdf#39519 - rename page if its name is not unique, e.g., if a slide is copied by
                 // ctrl + drag and drop (DND_ACTION_COPY)
-                if (bMustRename || !mpDocSh->IsPageNameUnique(aPgName))
+                if (bMustRename
+                    // tdf#164284 - prevent page name change during page move
+                    || (pBookmarkDoc->DoesMakePageObjectsNamesUnique()
+                        && !mpDocSh->IsPageNameUnique(aPgName)))
                 {
                     // Page name already in use -> use default name for default and
                     // notes page
